Changes in 0.7.0
======================
  * Build fixes
  * Provide a notify signal for tiles-queued and zoom

Changes in 0.6.0
======================
  * Support libsoup-2.2 and libsoup-2.4
  * Add a Add a OsmGpsMapLayer interface and a default OSD using the 
    interface. OsdGpsMapOsd is one implementation of this interface which
    draws one or all of; scale, map center coords, zoom control, dpade
    control, center crosshair. Much of the drawing code was from Till Harbaum.
  * Make the drag limit a gobject property

Changes in 0.5.0
======================
  * Note: Many of the improvements this release was based on 
    code from Till Harbaum
  * GDK drawing is not supported anymore, you must have cairo installed
  * Use automake silent rules
  * Add keyboard navigation support to map widget
  * Draw GPS heading in position indicator
  * Allow disabling of tile cache
  * You can now change the map source at runtime
  * Redraw and performance improvements
  * Update python bindings
  * Build and run correctly on Windows
  * Add OPENCYCLEMAP and OSM_PUBLIC_TRANSPORT
  * A new "changed" signal. Connect to this to monitor when the map zoom/scroll
    or center changes.
  * Add osm_gps_map_source_is_valid

Changes in 0.4.0
======================
  * Map can now be constructed by passing a MAP_SOURCE ID instead of
    the map repo uri
  * Fix iter safety when purging the tile cache
  * Fix for segfault when adding images to the map
  * Remove map repo uris from public API. They should now be retrieved using
    osm_gps_map_source_get_repo_uri(OsmGpsMapSource_t source)
  * Add osm_gps_map_get_scale
  * Implement a blank map source that just draws grey tiles
  * Demo application now stores maps in XDG_CACHE_DIR
  * Fix build and crashes on windows
  * Add getters for name and zoom
  * Add a more complete python example
  * Add ability to purge the cache

Changes in 0.3.0
======================
  * A new major contributor, Alberto Mardegan, 